syntax = "proto3";

package lastvisit;
import "google/protobuf/timestamp.proto";


option go_package = "proto/lastvisit";

message Lastvisit {
    string user_id = 1;
    google.protobuf.Timestamp lastvisit = 2; 
}

// message CreateLastvisitRequest {
//     string user_id = 1;
// }

// message CreateLastvisitResponse {
//     Lastvisit lastvisit = 1;
// }

message FindByUserIDRequest {
    string user_id = 1;
}

message FindByUserIDResponse {
    Lastvisit lastvisit = 1;
}

message UpdateLastvisitRequest {
    string user_id = 1;
}

message UpdateLastvisitResponse {
    Lastvisit lastvisit = 1;
}

service LastvisitService {
    // rpc CreateLastvisit(CreateLastvisitRequest) returns (CreateLastvisitResponse);
    rpc FindByUserID(FindByUserIDRequest) returns (FindByUserIDResponse);
    rpc UpdateLastvisit(UpdateLastvisitRequest) returns (UpdateLastvisitResponse);
}

